# scanner-vulnerabilite

./: .gitignore  .pre-commit-config.yaml  README.md  dev-client.html  docker-compose.yml  pyproject.toml
scanner/docs/: README.md
scanner/docs/dns/: spf-dkim-dmarc.md  zone-transfer.md
scanner/docs/headers/: csp.md  hsts.md  permissions-policy.md  referrer-policy.md  x-content-type.md  x-frame-options.md
scanner/docs/nginx/: server-tokens.md
scanner/docs/tls/: ciphers.md  heartbleed.md  protocols.md
src/scanner/api/: main.py
src/scanner/api/routers/: scan.py  stream.py
src/scanner/api/schemas/: scan.py
src/scanner/checks/: dns_check.py  headers.py  ssl_tls.py
src/scanner/core/entities/: check_result.py  scan_report.py
src/scanner/core/interfaces/: base_check.py  cache_repository.py  report_repository.py
src/scanner/infrastructure/: config.py  database.py
src/scanner/repositories/: mongo.py  redis.py
src/scanner/services/: scan_service.py
