[project]
name = "scanner"
version = "0.1.0"
description = "Scanner de vulnérabilités web modulaire"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "motor>=3.6",
    "redis>=5.2",
    "httpx>=0.27",
    "sslyze>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "black>=24.10",
    "pre-commit>=4.0",
    "commitizen>=3.30",
]

# --- Config de ruff : lint rapide, remplace flake8 + isort ---
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

# --- Config de black : formatage automatique, zéro débat de style ---
[tool.black]
line-length = 100
target-version = ["py312"]

# --- Config de pytest : découverte des tests + support async ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# --- Config de commitizen : force le format Conventional Commits ---
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
update_changelog_on_bump = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"